tests/success/complete_enum_switch.bz
enum E
{
	a, b, c
}

function main() -> i32
{
	let val = E.a;
	return switch (val) {
		.a => 0,
		.b => 1,
		.c => 2,
	};
}
