tests/error/enum_circular.bz
enum E
{
	a = .b,
	b = .a,
}
